--- a/presentation/styles.css
+++ b/presentation/styles.css
@@ -8,21 +8,24 @@ h1, h2, h3 {
 /* Custom styles */
 .remark-slide-content {
     font-size: 1.75em;
-    padding: 1em 2em;
+    padding: 0.5em 2em 1em 2em;
 }
 
 .remark-slide-content h1 {
     font-size: 3em;
+    margin-top: 0;
     margin-bottom: 0.5em;
 }
 
 .remark-slide-content h2 {
     font-size: 2.5em;
+    margin-top: 0;
     margin-bottom: 0.5em;
 }
 
 .remark-slide-content h3 {
     font-size: 2em;
+    margin-top: 0;
     margin-bottom: 0.5em;
 }
 
@@ -42,7 +45,7 @@ h1, h2, h3 {
 .pain-point {
     background: #ffebee;
     border-left: 5px solid #f44336;
-    padding: 1em;
+    padding: 0.25em;
     margin: 1em 0;
     border-radius: 0.3em;
 }
@@ -51,7 +54,7 @@ h1, h2, h3 {
 .success-point {
     background: #e8f5e9;
     border-left: 5px solid #4caf50;
-    padding: 1em;
+    padding: 0.25em;
     margin: 1em 0;
     border-radius: 0.3em;
 }
@@ -60,15 +63,15 @@ h1, h2, h3 {
 .slack-thread {
     background: #f5f5f5;
     border-radius: 0.5em;
-    padding: 1.0em;
-    margin: 1em 0;
+    padding: 0.5em;
+    margin: 0.25em;
     text-align: left;
     font-family: 'Ubuntu Mono', monospace;
     font-size: 1.2em;
 }
 
 .slack-message {
-    margin: 0.25em 0;
+    margin: 0.25em;
     padding: 0.25em;
     border-left: 3px solid #2196f3;
 }
@@ -114,13 +117,18 @@ th {
     text-align: center;
 }
 
+.code .remark-code {
+    font-size: 1.0em;
+}
+
+
 /* Large code */
 .large-code .remark-code {
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
 
 .xlarge-code .remark-code {
-    font-size: 1.2em;
+    font-size: 1.5em;
 }
 
 
