--- a/presentation/styles.css
+++ b/presentation/styles.css
@@ -43,7 +43,7 @@ h1, h2, h3 {
 
 /* Pain point styling */
 .pain-point {
-    background: #ffebee;
+    background: #fff3eb;
     border-left: 5px solid #f44336;
     padding: 0.25em;
     /* margin: 1em 0; */
@@ -52,8 +52,8 @@ h1, h2, h3 {
 
 /* Success styling */
 .success-point {
-    background: #e8f5e9;
-    border-left: 5px solid #4caf50;
+    background: #ebeeff;
+    border-left: 5px solid #4c7caf;
     padding: 0.025em 0.25em;
     border-radius: 0.3em;
 }
